@@ -1,0 +1,39 @@
+/*
+ *  This file is part of MUSIC.
+ *  Copyright (C) 2007 CSC, KTH
+ *
+ *  MUSIC is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ *  MUSIC is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+#ifndef MUSIC_APPLICATION_MAP_HH
+
+#include <string>
+
+namespace MUSIC {
+
+  class configuration {
+  public:
+    std::string lookup_string (std::string name);
+  };
+  
+  class application_map {
+  public:
+    configuration* configuration_for_rank (int rank);
+    void write_env ();
+  };
+  
+}
+
+#define MUSIC_APPLICATION_MAP_HH
+#endif
